# bt_use_cases

./: LICENSE  README.md
.github/workflows/: humble-ubuntu.yml
bt_uc_sim/: CMakeLists.txt  package.xml
bt_uc_sim/launch/: simple_simulation_launch.py
bt_uc_sim/maps/: simple_house_map.yaml
bt_uc_sim/models/simple_house/: model.config  model.sdf
bt_uc_sim/scripts/: set_init_amcl_pose.py
bt_uc_sim/worlds/: simple_house.world
docker/: Dockerfile.btuc  docker-compose.yml  ros_entrypoint.sh
simple_example/: README.md
simple_example/bts/: CMakeLists.txt  package.xml
simple_example/bts/descriptions/: bad_bt.xml  better_bt.xml
simple_example/bts/include/simple_example/: action_goto.h  action_wait.h  condition_battery_is_not_charging.h  condition_battery_level_above.h  condition_is_at.h
simple_example/bts/src/: action_goto.cpp  action_wait.cpp  condition_battery_is_not_charging.cpp  condition_battery_level_above.cpp  condition_is_at.cpp  run_bt.cpp
simple_example/components/: CMakeLists.txt  package.xml
simple_example/components/config/: pois.yaml
simple_example/components/launch/: all_components_launch.py
simple_example/components/src/: fake_battery_reader.cpp
simple_example/interfaces/: CMakeLists.txt  package.xml
simple_example/interfaces/srv/: GetNextPOI.srv  ResetTour.srv  SetBatteryLevel.srv  SetBatteryState.srv
tour_robot/: README.md
tour_robot/bts/: CMakeLists.txt  package.xml
tour_robot/bts/descriptions/: tour_bt.xml
tour_robot/bts/include/tour_robot/: action_goto.h  action_say_text.h  action_update_scheduler.h  action_wait.h  action_write_current_poi_on_bb.h  condition_battery_is_not_charging.h  condition_battery_level_above.h  condition_is_at.h
tour_robot/bts/src/: action_goto.cpp  action_say_text.cpp  action_update_scheduler.cpp  action_wait.cpp  action_write_current_poi_on_bb.cpp  condition_battery_is_not_charging.cpp  condition_battery_level_above.cpp  condition_is_at.cpp  run_bt.cpp
tour_robot/components/: CMakeLists.txt  package.xml
tour_robot/components/config/: pois.yaml  pois_descriptions.yaml  pois_map.yaml
tour_robot/components/launch/: all_components_launch.py
tour_robot/components/src/: fake_battery_reader.cpp  fake_talker.cpp  simple_tour_scheduler.cpp
tour_robot/interfaces/: CMakeLists.txt  package.xml
tour_robot/interfaces/srv/: GetBatteryState.srv  GetBatteryStatus.srv  GetCurrentPOI.srv  SayText.srv
