<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>simple_components</name>
  <version>0.1.0</version>
  <description>Custom components of the simple example (mainly ROS nodes performing simple stuff)</description>
  <maintainer email="mcolledanchise@gmail.com">Michele Colledanchise</maintainer>
  <license>BSD-3</license>

  <depend>geometry_msgs</depend>
  <depend> sensor_msgs</depend>
  <depend>simple_interfaces</depend>
  <depend>yaml_cpp_vendor</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>


  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
